@@ -9,3 +9,4 @@ thecl: The output format has been changed in ways that are not compatible with
        thtk 2.
 thecl: Support for TH95 has been added.
 thecl: Support for TH06 has been added.
+thtk: Manual pages have been written to replace README.
